--- a/mobx/package.json
+++ b/mobx/package.json
@@ -14,8 +14,8 @@
     "core-js": "3",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.3.1",
-    "mobx": "5",
-    "mobx-react": "5",
+    "mobx": "^6.3.0",
+    "mobx-react": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "terser-webpack-plugin": "^5.1.1",
