--- a/website/package.json
+++ b/website/package.json
@@ -11,9 +11,11 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
+    "connected-react-router": "^6.9.1",
     "copy-webpack-plugin": "^8.1.1",
     "core-js": "3",
     "css-loader": "^5.2.4",
@@ -26,6 +28,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
