--- a/website/package.json
+++ b/website/package.json
@@ -40,9 +40,17 @@
   },
   "scripts": {
     "start": "webpack serve --config ./webpack/webpack.config.development.js",
-    "build": "webpack --config ./webpack/webpack.config.production.js"
+    "build": "webpack --config ./webpack/webpack.config.production.js",
+    "eslint": "./node_modules/.bin/eslint src",
+    "eslint:fix": "./node_modules/.bin/eslint --fix src"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
