--- a/website/package.json
+++ b/website/package.json
@@ -41,13 +41,14 @@
   "scripts": {
     "start": "webpack serve --config ./webpack/webpack.config.development.js",
     "build": "webpack --config ./webpack/webpack.config.production.js",
-    "eslint": "./node_modules/.bin/eslint src",
-    "eslint:fix": "./node_modules/.bin/eslint --fix src"
+    "eslint": "./node_modules/.bin/eslint src/module/** --config .eslintrc.json",
+    "eslint:fix": "./node_modules/.bin/eslint --fix src/module/** --config .eslintrc.json"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
