--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "core-js": "3",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "history": "^5.0.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
@@ -32,6 +33,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
