--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,7 @@
     "core-js": "3",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
-    "history": "^5.0.0",
+    "history": "4",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
