--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -75,6 +75,7 @@
         "no-unused-expressions": ["error", {"allowShortCircuit": true}],
         "no-use-before-define": ["error", { "functions": false, "classes": false }],
         "react/static-property-placement": ["error", "static public field", {"defaultProps": "static public field"}],
-        "linebreak-style": "off"
+        "linebreak-style": "off",
+        "react/sort-comp": "off"
     }
 }
