--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^8.1.1",
     "core-js": "3",
     "css-loader": "^5.2.4",
+    "dayjs": "^1.10.5",
     "file-loader": "^6.2.0",
     "history": "4",
     "html-webpack-externals-plugin": "^3.8.0",
