--- a/website/.eslintrc.json
+++ b/website/.eslintrc.json
@@ -76,6 +76,7 @@
         "no-use-before-define": ["error", { "functions": false, "classes": false }],
         "react/static-property-placement": ["error", "static public field", {"defaultProps": "static public field"}],
         "linebreak-style": "off",
-        "react/sort-comp": "off"
+        "react/sort-comp": "off",
+        "consistent-return": "off"
     }
 }
