--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,8 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
-    "antd": "^4.15.4",
+    "antd": "^4.16.1",
+    "array-move": "^3.0.1",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
@@ -34,6 +35,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-sortable-hoc": "^2.0.0",
     "redux": "^4.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
