--- a/website/package.json
+++ b/website/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-resizable": "^3.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^2.0.0",
