--- a/swaggerToTypescript/package.json
+++ b/swaggerToTypescript/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-sortable-hoc": "^2.0.0",
     "style-loader": "^2.0.0",
+    "swagger-parser": "^10.0.2",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.28.0",
