--- a/swaggerToTypescript/package.json
+++ b/swaggerToTypescript/package.json
@@ -10,11 +10,14 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "array-move": "^3.0.1",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "chalk": "^4.1.2",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "3",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "fs-extra": "^10.0.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.3.1",
     "js-beautify": "^1.14.0",
@@ -29,7 +32,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "yargs": "^17.1.0"
   },
   "scripts": {
     "start": "webpack serve --config ./config/webpack.config.develop.js",
