--- a/lea-npm/package.json
+++ b/lea-npm/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "array-move": "^3.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "3",
@@ -35,6 +36,16 @@
     "build": "webpack --config ./config/webpack.config.product.js"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-webpack": "^0.13.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.2",
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
     "webpack-cli": "^4.5.0"
   }
 }
