--- a/lea-npm/package.json
+++ b/lea-npm/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@logicflow/core": "^0.6.16",
     "array-move": "^3.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
