--- a/lea-npm/package.json
+++ b/lea-npm/package.json
@@ -23,6 +23,7 @@
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-sortable-hoc": "^2.0.0",
     "style-loader": "^2.0.0",
