--- a/fa-core/config/.eslintrc.json
+++ b/fa-core/config/.eslintrc.json
@@ -62,6 +62,7 @@
         "object-curly-spacing": [
             "error",
             "always"
-        ]
+        ],
+        "no-constant-condition": ["error", {"checkLoops": false}]
     }
 }
