--- a/fa-core/config/tsconfig.json
+++ b/fa-core/config/tsconfig.json
@@ -22,5 +22,5 @@
         "noImplicitOverride": true,
         "downlevelIteration": true
     },
-    "include": ["../src"]
+    "include": ["../src", "../core"]
 }
