--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "core-fe",
+    "name": "rosen",
     "version": "0.0.1",
     "main": "lib/index.js",
     "module": "lib/index.js",
@@ -36,7 +36,7 @@
         "yargs": "17.2.1"
     },
     "dependencies": {
-        "@types/react": "17.0.30",
+        "@types/react": "17.0.33",
         "@types/react-dom": "17.0.9",
         "@types/react-redux": "7.1.19",
         "@types/react-router": "5.1.17",
@@ -45,15 +45,14 @@
         "classnames": "2.3.1",
         "connected-react-router": "6.9.1",
         "core-js": "3.18.3",
-        "css-loader": "^6.5.0",
+        "css-loader": "6.5.0",
         "immer": "9.0.6",
-        "less-loader": "^10.2.0",
+        "less-loader": "10.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-redux": "7.2.5",
         "react-router-dom": "5.3.0",
         "redux": "4.1.1",
-        "redux-saga": "1.1.3",
         "regenerator-runtime": "0.13.9",
         "style-loader": "^3.3.1",
         "ts-import-plugin": "^1.6.7",
@@ -61,7 +60,7 @@
         "tslib": "2.3.1"
     },
     "peerDependencies": {
-        "@types/react": "17.0.30",
+        "@types/react": "17.0.33",
         "@types/react-dom": "17.0.9",
         "@types/react-redux": "7.1.19",
         "@types/react-router": "5.1.17",
