--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -41,6 +41,7 @@
         "@types/react-redux": "7.1.19",
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
+        "antd": "^4.16.13",
         "axios": "0.23.0",
         "classnames": "2.3.1",
         "connected-react-router": "6.9.1",
