--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -10,10 +10,10 @@
         "url": ""
     },
     "scripts": {
-        "start": "webpack serve --config ./config/webpack.config.development.js",
+        "start": "webpack serve --config ./webpack/webpack.config.development.js",
         "build": "node script/build.js",
         "test": "jest --config config/jest.json",
-        "format": "prettier --config config/prettier.json --write \"{src,test,script,config}/**/*.{js,ts,tsx,json}\""
+        "format": "prettier --config webpack/prettier.json --write \"{src,test,script,config}/**/*.{js,ts,tsx,json}\""
     },
     "devDependencies": {
         "@types/jest": "27.0.2",
@@ -48,6 +48,7 @@
         "core-js": "3.18.3",
         "css-loader": "6.5.0",
         "immer": "9.0.6",
+        "less": "^4.1.2",
         "less-loader": "10.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
