--- a/fa-core/webpack/.eslintrc.json
+++ b/fa-core/webpack/.eslintrc.json
@@ -51,7 +51,7 @@
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-use-before-define": ["error", "nofunc"],
         "@typescript-eslint/ban-ts-comment": "off",
-        "no-console": ["error", {"allow": ["info", "warn", "error"]}],
+        // "no-console": ["error", {"allow": ["info", "warn", "error"]}],
         "no-duplicate-imports": ["error"],
         "no-useless-computed-key": ["error"],
         "no-useless-rename": ["error"],
