--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -11,7 +11,7 @@
     },
     "scripts": {
         "start": "webpack serve --config ./webpack/webpack.config.development.js",
-        "build": "node script/build.js",
+        "build": "webpack --config ./webpack/webpack.config.production.js",
         "test": "jest --config config/jest.json",
         "format": "prettier --config webpack/prettier.json --write \"{src,test,script,config}/**/*.{js,ts,tsx,json}\""
     },
@@ -20,6 +20,7 @@
         "@types/node": "^16.11.6",
         "@typescript-eslint/eslint-plugin": "5.1.0",
         "@typescript-eslint/parser": "5.1.0",
+        "autoprefixer": "^10.4.0",
         "chalk": "4.1.2",
         "clean-webpack-plugin": "^4.0.0",
         "eslint": "8.0.1",
@@ -27,10 +28,12 @@
         "fs-extra": "10.0.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "27.3.1",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
         "prettier": "2.4.1",
         "ts-jest": "27.0.7",
         "typescript": "4.4.4",
         "webpack": "^5.60.0",
+        "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.4.0",
         "yargs": "17.2.1"
@@ -50,6 +53,8 @@
         "immer": "9.0.6",
         "less": "^4.1.2",
         "less-loader": "10.2.0",
+        "mini-css-extract-plugin": "^2.4.4",
+        "postcss-loader": "^6.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-redux": "7.2.5",
@@ -77,7 +82,6 @@
         "react-redux": "7.2.5",
         "react-router-dom": "5.3.0",
         "redux": "4.1.1",
-        "redux-saga": "1.1.3",
         "regenerator-runtime": "0.13.9",
         "tslib": "2.3.1"
     },
