--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -24,7 +24,8 @@
         "chalk": "4.1.2",
         "clean-webpack-plugin": "^4.0.0",
         "eslint": "8.0.1",
-        "eslint-config-prettier": "8.3.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "fs-extra": "10.0.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "27.3.1",
