--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true,
         "source.fixAll.stylelint": true
-    }
+    },
+    "stylelint.packageManager": "yarn",
+    "stylelint.configFile": "fa-core/stylelint.json"
 }
