--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -31,6 +31,9 @@
         "jest": "27.3.1",
         "optimize-css-assets-webpack-plugin": "^6.0.1",
         "prettier": "2.4.1",
+        "stylelint": "^14.2.0",
+        "stylelint-config-standard": "^24.0.0",
+        "stylelint-webpack-plugin": "^3.1.0",
         "ts-jest": "27.0.7",
         "typescript": "4.4.4",
         "webpack": "^5.60.0",
