--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -35,7 +35,6 @@
         "stylelint-config-standard": "^24.0.0",
         "stylelint-webpack-plugin": "^3.1.0",
         "ts-jest": "27.0.7",
-        "typescript": "4.4.4",
         "webpack": "^5.60.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1",
@@ -43,9 +42,9 @@
         "yargs": "17.2.1"
     },
     "dependencies": {
-        "@types/react": "17.0.33",
+        "@types/react": "^17.0.38",
         "@types/react-dom": "17.0.9",
-        "@types/react-redux": "7.1.19",
+        "@types/react-redux": "^7.1.21",
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
         "antd": "^4.16.13",
@@ -61,14 +60,15 @@
         "postcss-loader": "^6.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-redux": "7.2.5",
+        "react-redux": "^7.2.6",
         "react-router-dom": "5.3.0",
         "redux": "4.1.1",
         "regenerator-runtime": "0.13.9",
         "style-loader": "^3.3.1",
         "ts-import-plugin": "^1.6.7",
         "ts-loader": "^9.2.6",
-        "tslib": "2.3.1"
+        "tslib": "2.3.1",
+        "typescript": "4.4.4"
     },
     "peerDependencies": {
         "@types/react": "17.0.33",
@@ -88,6 +88,9 @@
         "redux": "4.1.1",
         "regenerator-runtime": "0.13.9",
         "tslib": "2.3.1"
+    },
+    "resolutions": {
+        "@types/react": "*"
     },
     "engines": {
         "node": ">=13"
