--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -57,6 +57,7 @@
         "less": "^4.1.2",
         "less-loader": "10.2.0",
         "mini-css-extract-plugin": "^2.4.4",
+        "pinyin-pro": "^3.7.0",
         "postcss-loader": "^6.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
