--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -13,7 +13,7 @@
         "start": "webpack serve --config ./webpack/webpack.config.development.js",
         "build": "webpack --config ./webpack/webpack.config.production.js",
         "test": "jest --config config/jest.json",
-        "format": "prettier --config webpack/prettier.json --write \"{src,test,script,config}/**/*.{js,ts,tsx,json}\""
+        "format": "prettier --config prettier.json --write \"{core,src,test,script,config}/**/*.{js,ts,tsx,json}\""
     },
     "devDependencies": {
         "@types/jest": "27.0.2",
