--- a/nest/tsconfig.json
+++ b/nest/tsconfig.json
@@ -9,7 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./dist/src",
     "baseUrl": "./src",
     "incremental": true,
     "skipLibCheck": true,
