--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -16,6 +16,7 @@
         "format": "prettier --config prettier.json --write \"{core,src,test,script,config}/**/*.{js,ts,tsx,json}\""
     },
     "devDependencies": {
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
         "@types/jest": "27.0.2",
         "@types/node": "^16.11.6",
         "@typescript-eslint/eslint-plugin": "5.1.0",
@@ -31,6 +32,8 @@
         "jest": "27.3.1",
         "optimize-css-assets-webpack-plugin": "^6.0.1",
         "prettier": "2.4.1",
+        "react-refresh": "^0.13.0",
+        "react-refresh-typescript": "^2.0.5",
         "stylelint": "^14.2.0",
         "stylelint-config-standard": "^24.0.0",
         "stylelint-webpack-plugin": "^3.1.0",
@@ -47,7 +50,7 @@
         "@types/react-redux": "^7.1.21",
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
-        "antd": "^4.16.13",
+        "antd": "^4.21.0",
         "axios": "0.23.0",
         "classnames": "2.3.1",
         "connected-react-router": "6.9.1",
