--- a/fa-core/package.json
+++ b/fa-core/package.json
@@ -18,7 +18,7 @@
         "less-format": "stylelint --config stylelint.json \"src/**/*.less\" --fix",
         "generate-version": "node webpack/version/index.js",
         "verify": "yarn ts-verify & yarn less-verify",
-        "ts-verify": "eslint \"{core,src,test,script,config}/**/*.{js,ts,tsx}\" --config .eslintrc.json",
+        "ts-verify": "eslint \"{core,src,test,script,config}/**/*.{js,ts,tsx}\" --config .eslintrc.js",
         "less-verify": "stylelint --config stylelint.json \"src/**/*.less\""
     },
     "devDependencies": {
@@ -33,6 +33,7 @@
         "eslint": "8.0.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.1",
         "fs-extra": "10.0.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "27.3.1",
