--- a/ci/package.json
+++ b/ci/package.json
@@ -53,11 +53,13 @@
         "yargs": "17.2.1"
     },
     "dependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@types/react": "^17.0.38",
         "@types/react-dom": "17.0.9",
         "@types/react-redux": "^7.1.21",
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
+        "antd": "^4.21.4",
         "axios": "0.23.0",
         "classnames": "2.3.1",
         "connected-react-router": "6.9.1",
