--- a/ci/package.json
+++ b/ci/package.json
@@ -60,6 +60,7 @@
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
         "antd": "^4.21.4",
+        "array-move": "^4.0.0",
         "axios": "0.23.0",
         "classnames": "2.3.1",
         "connected-react-router": "6.9.1",
@@ -78,6 +79,7 @@
         "react-dom": "17.0.2",
         "react-redux": "^7.2.6",
         "react-router-dom": "5.3.0",
+        "react-sortable-hoc": "^2.0.0",
         "redux": "4.1.1",
         "regenerator-runtime": "0.13.9",
         "style-loader": "^3.3.1",
