--- a/ci/package.json
+++ b/ci/package.json
@@ -76,6 +76,7 @@
         "querystring": "^0.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-draggable": "^4.4.5",
         "react-redux": "^7.2.6",
         "react-router-dom": "5.3.0",
         "react-sortable-hoc": "^2.0.0",
