--- a/ci/package.json
+++ b/ci/package.json
@@ -54,6 +54,9 @@
     },
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
+        "@formily/antd": "^2.1.9",
+        "@formily/core": "^2.1.9",
+        "@formily/react": "^2.1.9",
         "@types/react": "^17.0.38",
         "@types/react-dom": "17.0.9",
         "@types/react-redux": "^7.1.21",
