--- a/roapp/project.config.json
+++ b/roapp/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "roapp",
   "description": "",
-  "appid": "touristappid",
+  "appid": "wx4aaa113a4243d6af",
   "setting": {
     "urlCheck": true,
     "es6": false,
