--- a/roapp/package.json
+++ b/roapp/package.json
@@ -26,7 +26,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "prettier-format": "prettier --config prettier.json --write \"{core,src}/**/*.{js,ts,tsx,json}\""
   },
   "browserslist": [
     "last 3 versions",
@@ -37,28 +38,36 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.13",
-    "@tarojs/runtime": "3.4.13",
-    "@tarojs/taro": "3.4.13",
     "@tarojs/plugin-framework-react": "3.4.13",
     "@tarojs/react": "3.4.13",
+    "@tarojs/runtime": "3.4.13",
+    "@tarojs/taro": "3.4.13",
+    "immer": "^9.0.15",
+    "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "react-redux": "^8.0.2",
+    "taro-ui": "^3.1.0-beta.2"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.4.13",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.13",
     "@tarojs/webpack-runner": "3.4.13",
-    "babel-preset-taro": "3.4.13",
-    "eslint-config-taro": "3.4.13",
-    "eslint": "^8.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "^14.4.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^18.0.6",
+    "@types/redux": "^3.6.0",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "babel-preset-taro": "3.4.13",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-taro": "3.4.13",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.4.0",
     "typescript": "^4.1.0"
   }
 }
