--- a/roapp/package.json
+++ b/roapp/package.json
@@ -34,6 +34,10 @@
     "Android >= 4.1",
     "ios >= 8"
   ],
+  "resolutions": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
+  },
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
