--- a/ci/package.json
+++ b/ci/package.json
@@ -82,6 +82,7 @@
         "react-dom": "17.0.2",
         "react-draggable": "^4.4.5",
         "react-redux": "^7.2.6",
+        "react-resizable": "^3.0.4",
         "react-router-dom": "5.3.0",
         "react-sortable-hoc": "^2.0.0",
         "redux": "4.1.1",
