--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -85,14 +85,17 @@
       "plugin:react/recommended",
       "prettier"
     ],
-    "plugins": ["@typescript-eslint", "prettier"],
+    "plugins": [
+      "@typescript-eslint",
+      "prettier"
+    ],
     "rules": {
-        "react/jsx-uses-react": "off",
-        "react/react-in-jsx-scope": "off",
-        "@typescript-eslint/no-empty-function": "off",
-        "react/prop-types": "off",
-        "react/sort-comp": "off",
-        "@typescript-eslint/no-explicit-any": "off"
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off",
+      "@typescript-eslint/no-empty-function": "off",
+      "react/prop-types": "off",
+      "react/sort-comp": "off",
+      "@typescript-eslint/no-explicit-any": "off"
     }
   }
 }
