--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -49,7 +49,8 @@
     "immer": "^9.0.19",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "taro-ui": "^3.1.0-beta.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
