--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -26,7 +26,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "module": "node script/module.js"
   },
   "browserslist": [
     "last 3 versions",
@@ -71,6 +72,7 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
+    "fs-extra": "^11.1.1",
     "prettier": "^2.8.5",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
