--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -27,7 +27,8 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-    "module": "node script/module.js"
+    "module": "node script/module.js",
+    "ro-eslint": "node_modules/.bin/eslint src/pages/home/index.tsx --rulesdir ./eslint_rules --rule 'no-use-taro-navigate: [error, {path: src/page}]'"
   },
   "browserslist": [
     "last 3 versions",
@@ -76,29 +77,7 @@
     "prettier": "^2.8.5",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
-    "webpack-bundle-analyzer": "^4.8.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "taro/react",
-      "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended",
-      "plugin:react/recommended",
-      "prettier"
-    ],
-    "plugins": [
-      "@typescript-eslint",
-      "prettier"
-    ],
-    "rules": {
-      "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off",
-      "@typescript-eslint/no-empty-function": "off",
-      "react/prop-types": "off",
-      "react/sort-comp": "off",
-      "@typescript-eslint/no-explicit-any": "off"
-    }
+    "webpack-bundle-analyzer": "^4.8.0",
+    "eslint-plugin-rosen": "file:../custom-eslint"
   }
 }
