--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -72,12 +72,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-rosen": "file:../custom-eslint",
+    "eslint-webpack-plugin": "2",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "fs-extra": "^11.1.1",
     "prettier": "^2.8.5",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "eslint-plugin-rosen": "file:../custom-eslint"
+    "webpack-bundle-analyzer": "^4.8.0"
   }
 }
