--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -28,7 +28,7 @@
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "module": "node script/module.js",
-    "auth": "node script/auth2.js && node_modules/.bin/eslint src/type/auth-file.ts --fix",
+    "auth": "node script/auth.js",
     "ro-eslint": "node_modules/.bin/eslint src/pages/home/index.tsx --rulesdir ./eslint_rules --rule 'no-use-taro-navigate: [error, {path: src/page}]'"
   },
   "browserslist": [
@@ -66,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "babel-preset-taro": "3.4.13",
+    "chalk": "^2.4.2",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-taro": "3.4.13",
