--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -74,7 +74,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-rosen": "file:../custom-eslint",
+    "eslint-plugin-rosen": "file:eslint-plugin-rosen-v0.0.1.tgz",
     "eslint-webpack-plugin": "2",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "fs-extra": "^11.1.1",
