--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -53,7 +53,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^8.0.5",
-    "taro-ui": "^3.1.0-beta.7"
+    "taro-ui": "^3.1.0-beta.7",
+    "wechat-core-app": "file:wechat-core-app-v1.0.3.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
