--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -29,6 +29,7 @@
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "module": "node script/module.js",
     "auth": "node script/auth.js",
+    "format": "eslint \"src/**/*.{js,ts,tsx}\" --config .eslintrc.js --fix",
     "ro-eslint": "node_modules/.bin/eslint src/pages/home/index.tsx --rulesdir ./eslint_rules --rule 'no-use-taro-navigate: [error, {path: src/page}]'"
   },
   "browserslist": [
@@ -76,6 +77,7 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-rosen": "file:eslint-plugin-rosen-v0.0.1.tgz",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-webpack-plugin": "2",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "fs-extra": "^11.1.1",
