--- a/ci/package.json
+++ b/ci/package.json
@@ -35,12 +35,14 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
         "eslint-webpack-plugin": "^3.1.1",
         "fs-extra": "10.0.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "27.3.1",
         "optimize-css-assets-webpack-plugin": "^6.0.1",
         "prettier": "2.4.1",
+        "react-dev-utils": "^12.0.1",
         "react-refresh": "^0.13.0",
         "react-refresh-typescript": "^2.0.5",
         "stylelint": "^14.2.0",
@@ -54,16 +56,11 @@
         "yargs": "17.2.1"
     },
     "dependencies": {
-        "@ant-design/icons": "^4.7.0",
-        "@formily/antd": "^2.1.9",
-        "@formily/core": "^2.1.9",
-        "@formily/react": "^2.1.9",
-        "@types/react": "^17.0.38",
-        "@types/react-dom": "17.0.9",
+        "@ant-design/icons": "^5.2.6",
         "@types/react-redux": "^7.1.21",
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
-        "antd": "^4.23.1",
+        "antd": "^5.11.5",
         "array-move": "^4.0.0",
         "axios": "0.23.0",
         "classnames": "2.3.1",
@@ -76,6 +73,7 @@
         "less": "^4.1.2",
         "less-loader": "10.2.0",
         "mini-css-extract-plugin": "^2.4.4",
+        "postcss-less": "^6.0.0",
         "postcss-loader": "^6.2.0",
         "querystring": "^0.2.1",
         "react": "17.0.2",
@@ -95,8 +93,8 @@
         "yup": "^0.32.11"
     },
     "peerDependencies": {
-        "@types/react": "17.0.33",
-        "@types/react-dom": "17.0.9",
+        "@types/react": "^18.2.39",
+        "@types/react-dom": "^18.2.17",
         "@types/react-redux": "7.1.19",
         "@types/react-router": "5.1.17",
         "@types/react-router-dom": "5.3.1",
@@ -114,7 +112,7 @@
         "tslib": "2.3.1"
     },
     "resolutions": {
-        "@types/react": "^17.0.0"
+        "@types/react": "^18.0.0"
     },
     "engines": {
         "node": ">=13"
