--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -52,6 +52,7 @@
     "@tarojs/taro": "3.4.13",
     "dayjs": "^1.11.7",
     "immer": "^9.0.19",
+    "postcss": "^8.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^8.0.5",
@@ -82,6 +83,7 @@
     "eslint-webpack-plugin": "2",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "fs-extra": "^11.1.1",
+    "postcss-less": "^6.0.0",
     "prettier": "^2.8.5",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
