--- a/wechat-app/package.json
+++ b/wechat-app/package.json
@@ -57,7 +57,7 @@
     "react-dom": "^17.0.0",
     "react-redux": "^8.0.5",
     "taro-ui": "^3.1.0-beta.7",
-    "wechat-core-app": "file:wechat-core-app-v1.0.3.tgz"
+    "wechat-core-app": "file:tgz/wechat-core-app-v1.0.3.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -78,7 +78,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-rosen": "file:eslint-plugin-rosen-v0.0.1.tgz",
+    "eslint-plugin-rosen": "file:tgz/eslint-plugin-rosen-v0.0.1.tgz",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-webpack-plugin": "2",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
