--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -14,6 +14,7 @@
       "experimentalDecorators": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
+      "ignoreDeprecations": "5.0",
       "suppressImplicitAnyIndexErrors": true,
       "downlevelIteration": true
     },
