--- a/frame-mobile/package.json
+++ b/frame-mobile/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "rosen",
+    "name": "mobile-app",
     "version": "0.0.1",
     "main": "lib/index.js",
     "module": "lib/index.js",
