--- a/frame-rosen/package.json
+++ b/frame-rosen/package.json
@@ -12,13 +12,13 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.0.0",
     "@types/react-router-dom": "^5.0.0",
-    "connected-react-router": "^6.0.0",
     "immer": "^10.0.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.0.0",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "redux-first-history": "^5.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.1.0",
