--- a/ci/package.json
+++ b/ci/package.json
@@ -90,6 +90,7 @@
         "tslib": "2.3.1",
         "typescript": "^4.7.4",
         "uuid": "^8.3.2",
+        "webtorrent": "^2.1.37",
         "yup": "^0.32.11"
     },
     "peerDependencies": {
