--- a/frame-pc/package.json
+++ b/frame-pc/package.json
@@ -33,6 +33,7 @@
     "prettier": "^3.1.0",
     "react-dev-utils": "^12.0.1",
     "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.9",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^4.8.0",
