--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,15 +21,15 @@
     "template",
     "vue-core-app",
     "wechat-app",
+    "rsbuild-base",
 ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.fixAll.stylelint": "explicit"
   },
   "stylelint.packageManager": "yarn",
-  "typescript.tsdk": "./frame-pc/node_modules/typescript/lib",
+  // "typescript.tsdk": "./frame-pc/node_modules/typescript/lib",
   "stylelint.validate": ["css", "postcss", "less"],
-  "stylelint.configFile": "./ci/stylelint.json",
   "editor.defaultFormatter": "esbenp.prettier-vscode"
   // "editor.formatOnSave": true
 }
