--- a/echarts-config/package.json
+++ b/echarts-config/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.27.3",
     "axios": "^1.12.2",
     "echarts": "^6.0.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -18,8 +19,9 @@
   },
   "devDependencies": {
     "@rsbuild/core": "^1.5.6",
-    "@rsbuild/plugin-react": "^1.4.0",
     "@rsbuild/plugin-less": "^1.5.0",
+    "@rsbuild/plugin-react": "^1.4.0",
+    "@types/leaflet": "^1.9.20",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
