--- a/echarts-config/package.json
+++ b/echarts-config/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.x",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "antd": "^5.27.3",
     "axios": "^1.12.2",
     "echarts": "^6.0.0",
