--- a/echarts-config/package.json
+++ b/echarts-config/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
+    "react-contexify": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1"
   },
