--- a/npm-package/stylelint-config-way/package.json
+++ b/npm-package/stylelint-config-way/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "stylelint-config-base",
+  "name": "stylelint-config-way",
   "version": "1.0.0",
-  "private": true,
   "main": "index.js",
   "exports": {
     ".": "./index.js"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "README.MD"
   ],
   "scripts": {
     "lint": "stylelint ."
