--- a/print/package.json
+++ b/print/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.4",
+    "react-use": "^17.6.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
